--- a/src/assets/scss/Detail.scss
+++ b/src/assets/scss/Detail.scss
@@ -1,3 +1,13 @@
+.detail-gallery{
+    margin: 75px 0 80px 0;
+    .slide1, .slide2{
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        min-height: 100vh;
+    }
+}
+
 .btn-wa{
     display: inline-flex;
     justify-content: center;
