--- a/src/assets/scss/Detail.scss
+++ b/src/assets/scss/Detail.scss
@@ -1,5 +1,5 @@
 .detail-gallery{
-    margin: 75px 0 80px 0;
+    margin: 0 0 80px 0;
     .slide1, .slide2{
         position: relative;
         background-repeat: no-repeat;
