--- a/src/assets/scss/HomeSlider.scss
+++ b/src/assets/scss/HomeSlider.scss
@@ -26,10 +26,12 @@
 
         a{
             display: flex;
+            width: 176px;
             height: 38px;
             align-items: center;
             color: #fff;
             font-size: 24px;
+            cursor: pointer;
             i{
                 margin-left: 10px;
                 font-size: 40px;
@@ -37,6 +39,7 @@
             }
             &:hover{
                 text-decoration: none;
+                color:#f28500;
             }
         }
     }
@@ -62,8 +65,8 @@
     }
 
     .carousel-indicators{
-       position: relative;
-       margin-top: 30px;
+       position: absolute;
+       margin: 0px;
         li{
             height: 12px;
             width: 12px;
@@ -111,6 +114,7 @@
     background-position: center;
     width: 40px;
     height: 40px;
+    cursor: pointer!important;
     &:hover{
         opacity: 10!important;
         background-image: url(../images/close-col.svg);
