--- a/public/css/query.css
+++ b/public/css/query.css
@@ -36,4 +36,34 @@
   .wrp-content-service .pdl {
     padding-left: 0!important;
   }
+  .video {
+    height: auto!important;
+  }
+  .video .frame-bottom {
+    bottom: 10px!important;
+  }
+  .about-intro .carousel-indicators {
+    width: auto!important;
+  }
+  .about-intro .dot-left img {
+    margin-left: 0!important;
+  }
+  .about-intro .content-right .line-sparate {
+    margin: 30px 0 30px 0px!important;
+  }
+  .about-intro .content-left .line-sparate {
+    margin: 30px 0px 30px 0px!important;
+  }
+  .about-intro .content-right h2 {
+    margin: 15px 0!important;
+  }
+  .content-performance {
+    padding: 15px!important;
+    background-color: #ebebeb;
+    width: auto!important;
+    height: auto!important;
+  }
+  .slide-about {
+    margin: 70px 0 70px 0!important;
+  }
 }
