--- a/public/css/query.less
+++ b/public/css/query.less
@@ -44,5 +44,45 @@
     }
   
   }
-}
 
+  .video{
+      height: auto!important;
+      .frame-bottom{
+          bottom: 10px!important;
+      }
+  }
+
+  .about-intro {
+    .carousel-indicators{
+        width: auto!important;
+    }
+
+    .dot-left img{
+        margin-left: 0!important;
+    }
+
+    .content-right .line-sparate{
+        margin: 30px 0 30px 0px!important;
+    }
+
+    .content-left .line-sparate{
+        margin: 30px 0px 30px 0px!important;
+    }
+
+    .content-right h2 {
+        margin: 15px 0!important;
+    }
+  }
+
+    .content-performance{
+      padding: 15px!important;
+      background-color: #ebebeb;
+      width: auto!important;
+      height: auto!important;
+    }
+
+    .slide-about {
+        margin: 70px 0 70px 0!important;
+    }
+
+}
