--- a/public/css/style.less
+++ b/public/css/style.less
@@ -118,8 +118,21 @@ h4{
 }
 
 
+.navbar-expand-lg{
+  flex-flow: column;
+}
+
+.line{
+  display: block;
+  margin-top: 10px;
+  background-color: #f28500;
+  width: 100%;
+  height: 1px;
+}
+
 //for transparent to solid when scroll
 .navbar.solid {
+  padding-bottom: 0;
   background-color: #666666;
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
