--- a/public/css/style.less
+++ b/public/css/style.less
@@ -131,12 +131,16 @@ h4{
   height: 1px;
 }
 
+
+.navbar{
+  background-image: linear-gradient(to bottom, rgba(102,102,102,5), rgba(0,0,0,0));
+  transition: background-color 1s ease 0s;
+}
 //for transparent to solid when scroll
 .navbar.solid {
-  padding-bottom: 0;
-  background-color: #666666;
-  transition: background-color 1s ease 0s;
-  box-shadow: 0 0 4px grey;
+  // background-image: linear-gradient(to bottom, rgba(102,102,102,5), rgba(0,0,0,0));
+  // transition: background-color 1s ease 0s;
+  // box-shadow: 0 0 4px grey;
 
   .navbar-brand {
     color: #fff;
@@ -152,6 +156,10 @@ h4{
       color: #fff;
       transition: color 1s ease 0s;
       font-weight: bold;
+      &:hover{
+        text-decoration: none;
+        color: @orange;
+      }
     }
 
     .is-active{
