--- a/public/css/style.less
+++ b/public/css/style.less
@@ -276,17 +276,19 @@ h4{
   background-color: #fff;
   min-width: 160px;
   font-weight: bold;
-  color: #F28500;
+  
   &:hover{
     background-color: #F28500;
-    color: #fff;
+    color: #fff!important;
   }
   &:focus{
     background-color: #F28500;
-    color: #fff;
+    color: #fff!important;
   }
   &:active{
     background-color: #F28500;
-    color: #fff;
+    color: #fff!important;
   }
 }
+
+
