--- a/public/css/query.css
+++ b/public/css/query.css
@@ -66,4 +66,13 @@
   .slide-about {
     margin: 70px 0 70px 0!important;
   }
+  .detail-slide a:nth-child(2) {
+    display: none;
+  }
+  .nav-item .is-active::before {
+    border-bottom: none!important;
+  }
+}
+.card-body .btn-wa {
+  width: auto!important;
 }
