--- a/public/css/query.less
+++ b/public/css/query.less
@@ -85,5 +85,22 @@
         margin: 70px 0 70px 0!important;
     }
 
+    .detail-slide{
+        a{
+            &:nth-child(2){
+                display: none;
+            }
+        }
+    }
+
+    .nav-item .is-active::before{
+        border-bottom: none!important;
+    }
+
 }
 
+.card-body{
+    .btn-wa{
+        width: auto!important;
+    }
+}
