--- a/src/assets/scss/HomeWhy.scss
+++ b/src/assets/scss/HomeWhy.scss
@@ -2,7 +2,10 @@
     text-align: center;
     img{
         display: block;
-        margin: 0 auto 38px auto;
-        width: 165px;
+        margin: 0 auto 15px auto;
+        width: 140px;
+    }
+    p{
+        text-align: left;
     }
 }
