--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ h6 {
   font-weight: bold;
 }
 h2 {
-  font-size: 24px;
+  font-size: 28px;
 }
 h3 {
   font-size: 20px;
@@ -121,9 +121,10 @@ h4 {
   transition: color 1s ease 0s;
 }
 .navbar-nav > li > a {
-  padding: 0 0.5rem;
+  padding: 0 15px;
   color: #fff;
   transition: color 1s ease 0s;
+  font-size: 18px;
   font-weight: bold;
 }
 .navbar-nav > li > a:hover {
@@ -206,10 +207,11 @@ h4 {
   animation-duration: 1s;
 }
 .btn-red {
-  border-radius: 4px!important;
+  border-radius: 3px!important;
   border: 1px solid #C92535;
   background-color: #C92535;
-  min-width: 160px;
+  min-width: 110px;
+  font-size: 14px;
   font-weight: bold;
   color: #fff;
 }
@@ -226,10 +228,11 @@ h4 {
   color: #C92535;
 }
 .btn-orange {
-  border-radius: 4px!important;
+  border-radius: 3px!important;
   border: 1px solid #F28500;
   background-color: #fff;
-  min-width: 160px;
+  min-width: 110px;
+  font-size: 14px;
   font-weight: bold;
 }
 .btn-orange:hover {
