--- a/public/css/style.less
+++ b/public/css/style.less
@@ -30,7 +30,7 @@ h2,h3,h4,h5,h6{
 }
 
 h2{
-  font-size: 24px;
+  font-size: 28px;
 }
 
 h3{
@@ -152,9 +152,10 @@ h4{
 .navbar-nav {
   > li {
     > a {
-      padding: 0 0.5rem;
+      padding: 0 15px;
       color: #fff;
       transition: color 1s ease 0s;
+      font-size: 18px;
       font-weight: bold;
       &:hover{
         text-decoration: none;
@@ -250,10 +251,11 @@ h4{
 
 
 .btn-red{
-  border-radius: 4px!important;
+  border-radius: 3px!important;
   border: 1px solid #C92535;
   background-color: #C92535;
-  min-width: 160px;
+  min-width: 110px;
+  font-size: 14px;
   font-weight: bold;
   color: #fff;
   &:hover{
@@ -271,10 +273,11 @@ h4{
 }
 
 .btn-orange{
-  border-radius: 4px!important;
+  border-radius: 3px!important;
   border: 1px solid #F28500;
   background-color: #fff;
-  min-width: 160px;
+  min-width: 110px;
+  font-size: 14px;
   font-weight: bold;
   
   &:hover{
