--- a/src/assets/scss/HomeAchievements.scss
+++ b/src/assets/scss/HomeAchievements.scss
@@ -7,10 +7,11 @@
         background-repeat: no-repeat;
         background-position: center center;
         border: 1px solid #ddd;
-        width: 48px;
-        height: 48px;
+        width: 40px;
+        height: 40px;
         &:hover{
             background-image: url(../images/left-arrow-col.svg);
+            background-size: 20px;
         }
     }
 
@@ -35,5 +36,8 @@
         background-repeat: no-repeat;
         background-position: center top;
         background-size: cover;
+        img{
+            border-radius: 3px!important;
+        }
     }
 }
