--- a/src/assets/scss/HomeSecondSlider.scss
+++ b/src/assets/scss/HomeSecondSlider.scss
@@ -16,12 +16,14 @@
         h2{
             margin: 0;
             font-size: 40px;
+            font-weight: 500;
             text-align: left;
         }
 
         p{
             margin-bottom: 45px;
             line-height: 24px;
+            font-size: 18px;
             font-weight: bold;
         }
     }
