--- a/public/css/query.less
+++ b/public/css/query.less
@@ -97,6 +97,13 @@
         border-bottom: none!important;
     }
 
+    .main-footer{
+        .btn-wa{
+            right: 15px!important;
+            bottom: 80px!important;
+        }
+    }
+
 }
 
 .card-body{
