--- a/src/assets/scss/Detail.scss
+++ b/src/assets/scss/Detail.scss
@@ -31,7 +31,7 @@
     margin: 0;
     padding: 10px 15px;
     border-radius: 5px!important;
-    background-color: #368C41;
+    background-color: #4caf50;
     width: 240px;
     font-size: 18px;
     color: #fff;
@@ -53,6 +53,7 @@
 .side-left{
     h2{
         margin-top: 0;
+        margin-bottom: 25px;
         text-align: left;
     }
 }
