--- a/src/assets/scss/AboutActivity.scss
+++ b/src/assets/scss/AboutActivity.scss
@@ -28,6 +28,7 @@
             background-image: url(../images/left-arrow.svg);
             &:hover{
                 background-image: url(../images/left-arrow-col.svg);
+                background-size: 20px;
             }
         }
 
@@ -36,6 +37,7 @@
             background-image: url(../images/right-arrow.svg);
             &:hover{
                 background-image: url(../images/right-arrow-col.svg);
+                background-size: 20px;
             }
         }
 
