--- a/src/assets/scss/AboutIntro.scss
+++ b/src/assets/scss/AboutIntro.scss
@@ -6,10 +6,11 @@
         background-image: url(../images/left-arrow.svg);
         background-repeat: no-repeat;
         background-position: center center;
-        width: 4px;
+        width: 40px;
         height: 40px;
         &:hover{
             background-image: url(../images/left-arrow-col.svg);
+            background-size: 20px;
         }
     }
 
@@ -27,8 +28,8 @@
        background-color: #f28500;
        width: 400px;
         li{
-            height: 10px;
-            width: 10px;
+            height: 5px;
+            width: 5px;
             border-radius: 100%!important;
             border: 1px solid #fff;
             background-color: transparent;
@@ -44,6 +45,10 @@
         h2{
             margin: 0;
             text-align: left;
+        }
+
+        h4{
+            font-size: 18px;
         }
     
         .line-sparate{
