--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,3 +247,25 @@ h4 {
   background-color: #F28500;
   color: #fff !important;
 }
+.btn-gradient-orange {
+  border-radius: 3px!important;
+  border: 1px solid #F28500;
+  background-color: #F28500;
+  background-image: linear-gradient(#ff9506, #ff6600);
+  min-width: 110px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+}
+.btn-gradient-orange:hover {
+  background-image: linear-gradient(#ff6600, #ff9506);
+  color: #fff !important;
+}
+.btn-gradient-orange:focus {
+  background-image: linear-gradient(#ff6600, #ff9506);
+  color: #fff !important;
+}
+.btn-gradient-orange:active {
+  background-image: linear-gradient(#ff6600, #ff9506);
+  color: #fff !important;
+}
