--- a/public/css/style.less
+++ b/public/css/style.less
@@ -294,4 +294,28 @@ h4{
   }
 }
 
+.btn-gradient-orange{
+  border-radius: 3px!important;
+  border: 1px solid #F28500;
+  background-color: #F28500;
+  background-image: linear-gradient(#ff9506, #ff6600);
+  min-width: 110px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  
+  &:hover{
+    background-image: linear-gradient(#ff6600, #ff9506);
+    color: #fff!important;
+  }
+  &:focus{
+    background-image: linear-gradient(#ff6600, #ff9506);
+    color: #fff!important;
+  }
+  &:active{
+    background-image: linear-gradient(#ff6600, #ff9506);
+    color: #fff!important;
+  }
+}
+
 
