--- a/src/assets/scss/Footer.scss
+++ b/src/assets/scss/Footer.scss
@@ -15,11 +15,11 @@
     .btn-wa{
         position: fixed;
         z-index: 100;
-        right: 80px;
+        right: 75px;
         bottom: 60px;
         display: inline-flex;
         align-items: center;
-        margin: 0 0 38px 0;
+        margin: 0;
         padding: 10px 15px;
         border-radius: 50px!important;
         background-color: #4caf50;
